--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,9 +22,9 @@ workflows:
           aws-secret-access-key: AWS_DEV_SECRET_KEY
           ###context myContext
           #create-repo: true
-          dockerfile: Prakriti26/test8/Dockerfile
+          dockerfile: './test8/Dockerfile'
           no-output-timeout: 20m
-          path: .
+          path: './test8'
           ### ##profile-name: myProfileName
           region: AWS_REGION
           repo: test8
