--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,8 +28,8 @@ workflows:
           ### ##profile-name: myProfileName
           region: AWS_REGION
           repo: test8
-          #skip-when-tags-exist: false
-          #tag: 'latest,0.1$CIRCLE_BUILD_NUM'
+          skip-when-tags-exist: false
+          tag: 'latest,0.1$CIRCLE_BUILD_NUM'
           filters:
             branches:
               only: circleci-project-setup
